--- a/app/src/main/res/layout/layout_balance_container.xml
+++ b/app/src/main/res/layout/layout_balance_container.xml
@@ -2,13 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <include
         android:id="@+id/cl_expenses"
         layout="@layout/row_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/vertical_divider_1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -17,7 +18,8 @@
         android:id="@+id/vertical_divider_1"
         layout="@layout/vertical_divider"
         android:layout_width="1dp"
-        android:layout_height="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/cl_income"
         app:layout_constraintStart_toEndOf="@id/cl_expenses"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,6 +29,7 @@
         layout="@layout/row_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/vertical_divider_2"
         app:layout_constraintStart_toEndOf="@id/vertical_divider_1"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,7 +38,8 @@
         android:id="@+id/vertical_divider_2"
         layout="@layout/vertical_divider"
         android:layout_width="1dp"
-        android:layout_height="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/cl_balance"
         app:layout_constraintStart_toEndOf="@id/cl_income"
         app:layout_constraintTop_toTopOf="parent" />
@@ -45,8 +49,19 @@
         layout="@layout/row_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/vertical_divider_2"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/lpi_balance_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toBottomOf="@id/cl_balance"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
