--- a/app/src/main/res/layout/row_list_data.xml
+++ b/app/src/main/res/layout/row_list_data.xml
@@ -11,16 +11,16 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="transaction label"/>
+        tools:text="transaction label" />
 
     <TextView
         android:id="@+id/tv_list_row_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:visibility="gone"
-        tools:visibility="visible"
-        tools:text="amount"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="amount"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
