--- a/app/src/main/res/layout/row_list_data.xml
+++ b/app/src/main/res/layout/row_list_data.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:clipToPadding="false"
         android:nestedScrollingEnabled="false"
-        android:paddingBottom="20dp"
+        android:paddingBottom="@dimen/dp20"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
