--- a/app/src/main/res/layout/layout_balance_container.xml
+++ b/app/src/main/res/layout/layout_balance_container.xml
@@ -58,9 +58,9 @@
         android:id="@+id/lpi_balance_indicator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="@dimen/dp20"
+        android:layout_marginStart="@dimen/dp20"
+        android:layout_marginEnd="@dimen/dp20"
         app:layout_constraintTop_toBottomOf="@id/cl_balance"
         app:layout_constraintStart_toStartOf="parent" />
 
