--- a/app/src/main/res/layout/layout_dollar_component.xml
+++ b/app/src/main/res/layout/layout_dollar_component.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <TextView
@@ -16,7 +16,7 @@
 
     <EditText
         android:id="@+id/et_dollar_amount"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:autofillHints="Add dollar value"
         android:hint="@string/add_dollar_value"
@@ -26,19 +26,23 @@
         app:layout_constraintStart_toEndOf="@id/tv_dollar_sign"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btn_up"
         android:layout_width="@dimen/dp20"
         android:layout_height="@dimen/dp20"
-        android:background="@android:drawable/arrow_up_float"
+        android:background="@color/white"
+        android:src="@android:drawable/arrow_up_float"
+        app:layout_constraintBottom_toTopOf="@id/btn_down"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btn_down"
         android:layout_width="@dimen/dp20"
         android:layout_height="@dimen/dp20"
-        android:background="@android:drawable/arrow_down_float"
+        android:background="@color/white"
+        android:src="@android:drawable/arrow_down_float"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_up" />
 
