--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,11 +26,11 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_transactions_container"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp20"
             android:layout_marginEnd="@dimen/dp20"
             android:clipToPadding="false"
-            android:nestedScrollingEnabled="false" />
+            android:nestedScrollingEnabled="true" />
 
     </ScrollView>
 
