--- a/app/src/main/res/layout/layout_dollar_component.xml
+++ b/app/src/main/res/layout/layout_dollar_component.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
@@ -10,7 +10,6 @@
         android:layout_height="wrap_content"
         android:text="@string/dollar_sign"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/et_dollar_amount"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -18,7 +17,7 @@
         android:id="@+id/et_dollar_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:autofillHints="Add dollar value"
+        android:autofillHints="@string/add_dollar_value"
         android:hint="@string/add_dollar_value"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,6 +30,7 @@
         android:layout_width="@dimen/dp20"
         android:layout_height="@dimen/dp20"
         android:background="@color/white"
+        android:contentDescription="@string/increment_button"
         android:src="@android:drawable/arrow_up_float"
         app:layout_constraintBottom_toTopOf="@id/btn_down"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,6 +41,7 @@
         android:layout_width="@dimen/dp20"
         android:layout_height="@dimen/dp20"
         android:background="@color/white"
+        android:contentDescription="@string/decrement_button"
         android:src="@android:drawable/arrow_down_float"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
