--- a/app/src/main/res/layout/row_list_data.xml
+++ b/app/src/main/res/layout/row_list_data.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:layout_marginStart="@dimen/dp5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Date label" />
